Change ModelsDto to gamexModels

--- a/src/gamex/gamexDesktopApp/gamexDesktopApp.csproj
+++ b/src/gamex/gamexDesktopApp/gamexDesktopApp.csproj
@@ -44,7 +44,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\gamexServices\gamexServices.csproj" />
-    <ProjectReference Include="..\ModelsDto\gamexModelsDto.csproj" />
+    <ProjectReference Include="..\ModelsDto\gamexModels.csproj" />
   </ItemGroup>
 
   <ItemGroup>
