--- a/src/gamex/gamexAPI/gamexAPI.csproj
+++ b/src/gamex/gamexAPI/gamexAPI.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ModelsDto\gamexModelsDto.csproj" />
+    <ProjectReference Include="..\ModelsDto\gamexModels.csproj" />
   </ItemGroup>
 
 </Project>
