--- a/src/gamex/gamexServices/gamexServices.csproj
+++ b/src/gamex/gamexServices/gamexServices.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ModelsDto\gamexModelsDto.csproj" />
+    <ProjectReference Include="..\ModelsDto\gamexModels.csproj" />
   </ItemGroup>
 
 </Project>
