--- a/src/gamex/gamexDesktopApp/gamexDesktopApp.csproj
+++ b/src/gamex/gamexDesktopApp/gamexDesktopApp.csproj
@@ -11,6 +11,7 @@
     <None Remove="Images\avatar.png" />
     <None Remove="Images\banner.jpg" />
     <None Remove="Images\cart.png" />
+    <None Remove="Images\Games\1.jpg" />
     <None Remove="Images\gamexTitle.png" />
     <None Remove="Images\logo.png" />
     <None Remove="Images\logout.png" />
@@ -18,6 +19,10 @@
     <None Remove="Images\search.png" />
     <None Remove="Images\user.png" />
     <None Remove="Images\wallet.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Images\Games\1.jpg" />
   </ItemGroup>
 
   <ItemGroup>
