--- a/src/gamex/gamexDesktopApp/gamexDesktopApp.csproj
+++ b/src/gamex/gamexDesktopApp/gamexDesktopApp.csproj
@@ -11,7 +11,6 @@
     <None Remove="Images\avatar.png" />
     <None Remove="Images\banner.jpg" />
     <None Remove="Images\cart.png" />
-    <None Remove="Images\Games\1.jpg" />
     <None Remove="Images\gamexTitle.png" />
     <None Remove="Images\logo.png" />
     <None Remove="Images\logout.png" />
@@ -19,10 +18,6 @@
     <None Remove="Images\search.png" />
     <None Remove="Images\user.png" />
     <None Remove="Images\wallet.png" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Resource Include="Images\Games\1.jpg" />
   </ItemGroup>
 
   <ItemGroup>
@@ -45,6 +40,7 @@
     <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="PasswordBoxMVVM" Version="1.0.5" />
+    <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
