--- a/src/gamex/gamexAPI/gamexAPI.csproj
+++ b/src/gamex/gamexAPI/gamexAPI.csproj
@@ -15,6 +15,7 @@
 	  <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
 	  <PackageReference Include="FluentValidation.AspNetCore" Version="11.0.1" />
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.5" />
+	  <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.5" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.5">
@@ -27,6 +28,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ModelsDto\gamexModelsDto.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="PrivateFiles\Users\" />
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 </Project>
