--- a/src/gamex/gamexAPI/gamexAPI.csproj
+++ b/src/gamex/gamexAPI/gamexAPI.csproj
@@ -13,13 +13,9 @@
 
 	<ItemGroup>
 	  <Compile Remove="PrivateFiles\Users\**" />
-	  <Compile Remove="wwwroot\**" />
 	  <Content Remove="PrivateFiles\Users\**" />
-	  <Content Remove="wwwroot\**" />
 	  <EmbeddedResource Remove="PrivateFiles\Users\**" />
-	  <EmbeddedResource Remove="wwwroot\**" />
 	  <None Remove="PrivateFiles\Users\**" />
-	  <None Remove="wwwroot\**" />
 	</ItemGroup>
 
   <ItemGroup>
@@ -39,6 +35,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ModelsDto\gamexModels.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 </Project>
