Adding Validators to gamexModels

--- a/src/gamex/gamexAPI/gamexAPI.csproj
+++ b/src/gamex/gamexAPI/gamexAPI.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\gamexEntities\gamexEntities.csproj" />
     <ProjectReference Include="..\ModelsDto\gamexModels.csproj" />
   </ItemGroup>
 
