--- a/src/gamex/ModelsDto/gamexModels.csproj
+++ b/src/gamex/ModelsDto/gamexModels.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\gamexEntities\gamexEntities.csproj" />
+  </ItemGroup>
+
 </Project>
