--- a/src/gamex/gamexDesktopApp/gamexDesktopApp.csproj
+++ b/src/gamex/gamexDesktopApp/gamexDesktopApp.csproj
@@ -34,6 +34,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Expression.Interaction" Version="3.0.40218" />
     <PackageReference Include="Flurl.Http" Version="3.2.4" />
     <PackageReference Include="LoadingSpinner.WPF" Version="1.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
